--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
         "docgen2": "typedoc --out doc/api src --mode file --excludeExternals --target ES6 --ignoreCompilerErrors --readme doc/ApiReference.md"
     },
     "dependencies": {
+        "highlight.js": "9.12.0",
+        "handlebars": "4.0.12",
+        "js-yaml": "3.12.0",
         "pip-services3-commons-node": "^3.0.4",
         "pip-services3-components-node": "^3.0.6"
     },
