--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "pip-services3-container-node",
-    "version": "3.0.4",
+    "version": "3.0.5",
     "author": "Conceptual Vision Consulting LLC",
     "description": "IoC container for Pip.Services in Node.js",
     "contributors": [
@@ -35,9 +35,8 @@
         "docgen2": "typedoc --out docs src --mode file --excludeExternals --target ES6 --ignoreCompilerErrors --readme docs/ApiReference.md"
     },
     "dependencies": {
-        "highlight.js": "9.12.0",
-        "handlebars": "4.0.12",
-        "js-yaml": "3.12.0",
+        "handlebars": "^4.7.6",
+        "js-yaml": "^3.14.0",
         "pip-services3-commons-node": "^3.0.4",
         "pip-services3-components-node": "^3.0.6"
     },
