--- a/package.json
+++ b/package.json
@@ -30,13 +30,9 @@
         "build": "tsc",
         "watch": "tsc --watch",
         "test": "mocha -t 10000 -R spec -u tdd --recursive ./obj/test",
-        "retest": "tsc && mocha -t 10000 -R spec -u tdd --recursive ./obj/test",
-        "docgen": "typedoc --out docs src --mode modules --excludeExternals --excludePrivate --target ES6 --ignoreCompilerErrors",
-        "docgen2": "typedoc --out docs src --mode file --excludeExternals --target ES6 --ignoreCompilerErrors --readme docs/ApiReference.md"
+        "retest": "tsc && mocha -t 10000 -R spec -u tdd --recursive ./obj/test"
     },
     "dependencies": {
-        "handlebars": "^4.7.6",
-        "js-yaml": "^3.14.0",
         "pip-services3-commons-node": "^3.0.4",
         "pip-services3-components-node": "^3.0.6"
     },
@@ -47,8 +43,6 @@
         "@types/mocha": "*",
         "@types/chai": "*",
         "chai": "^3.5.0",
-        "mocha": "^2.2.0",
-        "typedoc": "^0.11.1",
-        "typedoc-plugin-external-module-name": "git+https://github.com/hobbyguy77/typedoc-plugin-external-module-name.git"
+        "mocha": "^2.2.0"
     }
 }
